appId: com.duckduckgo.mobile.android
name: "Preonboarding: Ensuring user can skip onboarding and start browsing"
tags:
  - onboardingInternalTest
---
# Pre-requisite: None

- retry:
    maxRetries: 3
    commands:
      # First launch as a fresh install
      - launchApp:
          clearState: true
      # Wait for the welcome dialog so we create the reinstaller marker before relaunch
      - assertVisible:
          text: "(let's get started!|Let's do it!)"
      # Relaunch with app data cleared
      - launchApp:
          clearState: true
- assertVisible:
    text: ".*(Ready for a faster browser that protects you and lets you decide when and how to use.AI|Ready for a faster browser that puts you in.control).*"
- assertVisible:
    text: "(let's get started!|Let's do it!)"
# Wait for privacy config to download
- extendedWaitUntil:
    visible:
      id: "skipOnboardingButton"
    timeout: 30000
- tapOn: "I've been here before"
- assertVisible:
    text: "Got it! I'll skip the other tips."
- assertVisible:
    text: ".*Remember: you can delete all your tabs, history, and browsing data in two taps with the Fire Button..*"
- assertVisible:
    text: "Show Tutorial"
- tapOn: "Start Browsing"
- assertVisible:
    id: "newTabPage"
