appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Launch Privacy Pro from special URL is working"
tags:
  - pproTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://duckduckgo.com/pro"
      - pressKey: Enter
      - assertVisible:
          id: "com.duckduckgo.mobile.android:id/titleToolbar"
          text: "Privacy Pro"
      - assertVisible:
          text: "VPN"
      - assertVisible:
          text: "Personal Information Removal"
      - assertVisible:
          text: "Identity Theft Restoration"
