appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
tags:
    - privacyTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
            - runFlow: ../shared/skip_all_onboarding.yaml
            - inputText: "https://privacy-test-pages.site/privacy-protections/query-parameters/"
            - pressKey: Enter
            - assertVisible:
                text: "Link with fbclid, fb_source and 1 standard parameter"
            - tapOn:
                text: "Link with fbclid, fb_source and 1 standard parameter"
            - assertNotVisible:
                text: "fbclid=12345&fb_source=someting&u=14"
            - assertVisible:
                text: "u=14"
