appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
tags:
    - privacyTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
            - runFlow: ../shared/skip_all_onboarding.yaml
            - inputText: "https://privacy-test-pages.site/privacy-protections/query-parameters/"
            - pressKey: Enter
            - assertVisible:
                text: "Link which should not be rewritten"
            - tapOn:
                text: "Link which should not be rewritten"
            - assertVisible:
                text: "q=something&id=1234"
