appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
tags:
    - privacyTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
            - runFlow: ../shared/skip_all_onboarding.yaml
            - inputText: "https://www.search-company.site/#ad-id-5"
            - pressKey: Enter
            - assertVisible:
                id: "ad-id-5"
            - longPressOn:
                id: "ad-id-5"
            - assertVisible:
                text: "Open in New Tab"
            - tapOn:
                text: "Open in New Tab"
            - assertVisible:
                text: "Publisher site"
            - runFlow: ../shared/browser_screen/click_on_privacy_shield.yaml
            - assertVisible:
                text: "View Tracker Companies"
            - tapOn:
                text: "View Tracker Companies"
            - assertVisible:
                text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
            - assertVisible:
                text: "About our Web Tracking Protections"
            - assertVisible:
                text: ".*Ad Company"
            - assertVisible:
                text: "ad-company.site"
            - action: back
            - assertVisible:
                text: "View Non-Tracker Companies"
            - tapOn:
                text: "View Non-Tracker Companies"
            - assertVisible:
                text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
            - assertVisible:
                text: "About our Web Tracking Protections"
            - assertVisible:
                text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
            - assertVisible:
                text: "How our search ads impact our protections"
            - assertVisible:
                text: ".*Ad Company"
            - assertVisible:
                text: "convert.ad-company.site"
            - action: back
            - action: back
            - assertVisible:
                text: "Buy now"
            - assertVisible:
                id: "buy-now"
            - tapOn:
                id: "buy-now"
            - assertVisible:
                text: "Checkout"
            - runFlow: ../shared/browser_screen/click_on_privacy_shield.yaml
            - assertVisible:
                text: "View Tracker Companies"
            - tapOn:
                text: "View Tracker Companies"
            - assertVisible:
                text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
            - assertVisible:
                text: "About our Web Tracking Protections"
            - assertVisible:
                text: ".*Ad Company"
            - assertVisible:
                text: "ad-company.site"
            - action: back
            - assertVisible:
                text: "View Non-Tracker Companies"
            - tapOn:
                text: "View Non-Tracker Companies"
            - assertVisible:
                text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
            - assertVisible:
                text: "About our Web Tracking Protections"
            - assertVisible:
                text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
            - assertVisible:
                text: "How our search ads impact our protections"
            - assertVisible:
                text: ".*Ad Company"
            - assertVisible:
                text: "convert.ad-company.site"
            - action: back
            - action: back
            - assertVisible:
                id: "pay-button"
            - tapOn:
                id: "pay-button"
            - assertVisible:
                text: ".*Order complete.*"
            - runFlow: ../shared/browser_screen/click_on_privacy_shield.yaml
            - assertVisible:
                text: "View Tracker Companies"
            - tapOn:
                text: "View Tracker Companies"
            - assertVisible:
                text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
            - assertVisible:
                text: "About our Web Tracking Protections"
            - assertVisible:
                text: ".*Ad Company"
            - assertVisible:
                text: "ad-company.site"
            - action: back
            - assertVisible:
                text: "View Non-Tracker Companies"
            - tapOn:
                text: "View Non-Tracker Companies"
            - assertVisible:
                text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
            - assertVisible:
                text: "About our Web Tracking Protections"
            - assertVisible:
                text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
            - assertVisible:
                text: "How our search ads impact our protections"
            - assertVisible:
                text: ".*Ad Company"
            - assertVisible:
                text: "convert.ad-company.site"



